--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <title>Shape Shifter</title>
     <link rel="stylesheet" href="site.min.css">
-    <title>2020666之粒子文字
+    <title>2020666之粒子文字</title>
   </head>
   <body>
     <canvas class="canvas"></canvas>
@@ -40,7 +40,7 @@
             <div class="ui-details-content">
               <h1>文本格式器</h1>
               <p>
-                部署者<a href="//www.kennethcachia.com" target="_blank">潘悦洋<a/>.<br/>
+                部署者<a href="//" target="_blank">潘悦洋<a/>.<br/>
               </p>
             </div>
           </div>
