--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
 
 
       <div class="tabs">
-        <div class="tabs-labels"><span class="tabs-label">Commands</span><span class="tabs-label">Info</span><span class="tabs-label">Share</span></div>
+        <div class="tabs-labels"><span class="tabs-label">命令</span></div>
 
         <div class="tabs-panels">
           <ul class="tabs-panel commands">
-            <li class="commands-item"><span class="commands-item-title">文本</span><span class="commands-item-info" data-demo="Hello :)">Type anything</span><span class="commands-item-action">Demo</span></li>
-            <li class="commands-item"><span class="commands-item-title">倒数</span><span class="commands-item-info" data-demo="#countdown 10">#countdown<span class="commands-item-mode">number</span></span><span class="commands-item-action">Demo</span></li>
-            <li class="commands-item"><span class="commands-item-title">图标</span><span class="commands-item-info" data-demo="#icon thumbs-up">#icon<span class="commands-item-mode">name</span>&nbsp;(using <a href="//fortawesome.github.io/Font-Awesome/#icons-new" target="_blank">Font Awesome</a>)</span><span class="commands-item-action">Demo</span></li>
-            <li class="commands-item"><span class="commands-item-title">时间</span><span class="commands-item-info" data-demo="#time">#time</span><span class="commands-item-action">Demo</span></li>
-            <li class="commands-item"><span class="commands-item-title">矩形</span><span class="commands-item-info" data-demo="#rectangle 30x15">#rectangle<span class="commands-item-mode">width x height</span></span><span class="commands-item-action">Demo</span></li>
-            <li class="commands-item"><span class="commands-item-title">圆形</span><span class="commands-item-info" data-demo="#circle 25">#circle<span class="commands-item-mode">diameter</span></span><span class="commands-item-action">Demo</span></li>
+            <li class="commands-item"><span class="commands-item-title">文本</span><span class="commands-item-info" data-demo="小潘万岁">随便写</span><span class="commands-item-action">Demo</span></li>
+            <li class="commands-item"><span class="commands-item-title">倒数</span><span class="commands-item-info" data-demo="#countdown 10">#countdown<span class="commands-item-mode">数字</span></span><span class="commands-item-action">试试</span></li>
+            <li class="commands-item"><span class="commands-item-title">时间</span><span class="commands-item-info" data-demo="#time">#time</span><span class="commands-item-action">试试</span></li>
+            <li class="commands-item"><span class="commands-item-title">矩形</span><span class="commands-item-info" data-demo="#rectangle 30x15">#rectangle<span class="commands-item-mode">长 x 宽</span></span><span class="commands-item-action">试试</span></li>
+            <li class="commands-item"><span class="commands-item-title">圆形</span><span class="commands-item-info" data-demo="#circle 25">#circle<span class="commands-item-mode">diameter</span></span><span class="commands-item-action">试试</span></li>
 
-            <li class="commands-item commands-item--gap"><span class="commands-item-title">Animate</span><span class="commands-item-info" data-demo="The time is|#time|#countdown 3|#icon thumbs-up"><span class="commands-item-mode">command1</span>&nbsp;|<span class="commands-item-mode">command2</span></span><span class="commands-item-action">Demo</span></li>
+            <li class="commands-item commands-item--gap"><span class="commands-item-title">组合</span><span class="commands-item-info" data-demo="时间|#time|#countdown 3"><span class="commands-item-mode">第一个命令</span>&nbsp;|<span class="commands-item-mode">第二个命令</span></span><span class="commands-item-action">试试</span></li>
           </ul>
 
           <div class="tabs-panel ui-details">
