--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
         <div class="tabs-panels">
           <ul class="tabs-panel commands">
-            <li class="commands-item"><span class="commands-item-title">文本</span><span class="commands-item-info" data-demo="小潘万岁">随便写</span><span class="commands-item-action">Demo</span></li>
+            <li class="commands-item"><span class="commands-item-title">文本</span><span class="commands-item-info" data-demo="小潘万岁">随便写</span><span class="commands-item-action">试试</span></li>
             <li class="commands-item"><span class="commands-item-title">倒数</span><span class="commands-item-info" data-demo="#countdown 10">#countdown<span class="commands-item-mode">数字</span></span><span class="commands-item-action">试试</span></li>
             <li class="commands-item"><span class="commands-item-title">时间</span><span class="commands-item-info" data-demo="#time">#time</span><span class="commands-item-action">试试</span></li>
             <li class="commands-item"><span class="commands-item-title">矩形</span><span class="commands-item-info" data-demo="#rectangle 30x15">#rectangle<span class="commands-item-mode">长 x 宽</span></span><span class="commands-item-action">试试</span></li>
-            <li class="commands-item"><span class="commands-item-title">圆形</span><span class="commands-item-info" data-demo="#circle 25">#circle<span class="commands-item-mode">diameter</span></span><span class="commands-item-action">试试</span></li>
+            <li class="commands-item"><span class="commands-item-title">圆形</span><span class="commands-item-info" data-demo="#circle 25">#circle<span class="commands-item-mode">半径</span></span><span class="commands-item-action">试试</span></li>
 
             <li class="commands-item commands-item--gap"><span class="commands-item-title">组合</span><span class="commands-item-info" data-demo="时间|#time|#countdown 3"><span class="commands-item-mode">第一个命令</span>&nbsp;|<span class="commands-item-mode">第二个命令</span></span><span class="commands-item-action">试试</span></li>
           </ul>
