--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="ui">
       <input class="ui-input" type="text" />
       <span class="ui-return">↵</span>
+      <span class="orzpyy">小潘工作室</span>
     </div>
 
     <div class="overlay">
