--- a/pyy.html
+++ b/pyy.html
@@ -295,7 +295,6 @@ var WINDOW_WIDTH = 920;
 <body>
 <div id="zzsc"></div>
 <div style="text-align:center;clear:both;margin-top:20px">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="/follow.js" type="text/javascript"></script>
+<span class="orzpyy" onclick="location = '/pyy2.html'">小潘工作室</span>
 </div>
 </body>
